--- a/resume.html
+++ b/resume.html
@@ -19,12 +19,13 @@
     <body>
 
         <H1>RAJESH VELIP</H1>
+        <img src="photo6.JPG" width="10%" height="10%">
         <table style="width:100%">
         <tr>
         <td ALIGN=”left”>H.No: 592, Velipwada Barcem</td>
         <td ALIGN=”right”>Mobile No: 8669100787</td></tr>
         <tr><td ALIGN=”left”>Quepem Goa, 403703</td>
-        <td ALIGN=”right”>Email: rajeshvelip39@gmail.com</td>
+        <td ALIGN=”right”><a href="mailto:rajeshvelip39@gmail.com">Email: rajeshvelip39@gmail.com</a></td>
             </tr>
         </table>
 
@@ -92,6 +93,8 @@ Scripting Languages: HTML, CSS, Javascript, PHP, MySQL, jQuery, jQuery Mobile, B
 Editor: Jupyter notebook ,Visual Studio, Sublime Text Editor.<br>
 </p>
 
+
+<h4><a href="tutorials.html">Click here to view tutorial</a></h4>
 
         </body>
         
