--- a/tutorials.html
+++ b/tutorials.html
@@ -5,7 +5,7 @@
     <h5><a href="https://www.tutorialspoint.com/html/html_basic_tags.html">tutorialspoint.com</a></h5>
     <h5><a href="https://www.internetingishard.com/html-and-css/">internetingishard</a></h5>
 
-    <h4><a href="resume.html">Click here to go back</h4>
+    <h4><a href="index.html">Click here to go back</h4>
 
 </body>
 
