--- a/tutorials.html
+++ b/tutorials.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <h5><a href="https://www.w3schools.com/html/">w3Schools.com</a></h5>
-    <h5><a href="https://www.tutorialspoint.com/html/html_basic_tags.html">tutorialspoint.com</a></h5>
-    <h5><a href="https://www.internetingishard.com/html-and-css/">internetingishard</a></h5>
-
+    <ul>
+    <li><a href="https://www.w3schools.com/html/">w3Schools.com</a></li>
+    <li><a href="https://www.tutorialspoint.com/html/html_basic_tags.html">tutorialspoint.com</a></li>
+    <li><a href="https://www.internetingishard.com/html-and-css/">internetingishard</a></li>
+    </ul>
     <h4><a href="index.html">Click here to go back</h4>
 
 </body>
