--- a/tutorials.html
+++ b/tutorials.html
@@ -6,7 +6,7 @@
     <li><a href="https://www.tutorialspoint.com/html/html_basic_tags.html">tutorialspoint.com</a></li>
     <li><a href="https://www.internetingishard.com/html-and-css/">internetingishard</a></li>
     </ul>
-    <h4><a href="index.html">Click here to go back</h4>
+    <h4><a href="index.html">Home</h4>
 
 </body>
 
