--- a/index.html
+++ b/index.html
@@ -1,31 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head><title>My Resume</title>
-    <style>
-        table, tr,td{
-            border:none;
-        }
-
-    #academics{
-        border: 1px solid black; 
-    }
+    <head><title>Rajesh Velip</title>
     
-    h3{
-        background-color: gray;
-    }
-    </style>
     </head>
 
     <body>
 
         <H1>RAJESH VELIP</H1>
         <img src="photo6.JPG" width="10%" height="10%">
-        <table style="width:100%">
+        <table>
         <tr>
-        <td ALIGN=”left”>H.No: 592, Velipwada Barcem</td>
-        <td ALIGN=”right”>Mobile No: 8669100787</td></tr>
-        <tr><td ALIGN=”left”>Quepem Goa, 403703</td>
-        <td ALIGN=”right”><a href="mailto:rajeshvelip39@gmail.com">Email: rajeshvelip39@gmail.com</a></td>
+        <td>H.No: 592, Velipwada Barcem &emsp;&emsp;&emsp;</td>
+        <td>Mobile No: 8669100787</td></tr>
+        <tr><td>Quepem Goa, 403703 &emsp;&emsp;&emsp;</td>
+        <td><a href="mailto:rajeshvelip39@gmail.com">Email: rajeshvelip39@gmail.com</a></td>
             </tr>
         </table>
 
@@ -94,7 +82,7 @@ Editor: Jupyter notebook ,Visual Studio, Sublime Text Editor.<br>
 </p>
 
 
-<h4><a href="tutorials.html">Click here to view tutorial</a></h4>
+<h4><a href="tutorials.html">Tutorials</a></h4>
 
         </body>
         
