--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head><title>Rajesh Velip</title>
-    
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <div id="resume">
+      <h2 style="text-align: center;">My Resume</h2>
+    </div>
+    <body class="container">
 
-        <H1>RAJESH VELIP</H1>
-        <img src="photo6.JPG" width="10%" height="10%">
+        <div id="color">
         <table>
         <tr>
-        <td>H.No: 592, Velipwada Barcem &emsp;&emsp;&emsp;</td>
-        <td>Mobile No: 8669100787</td></tr>
-        <tr><td>Quepem Goa, 403703 &emsp;&emsp;&emsp;</td>
-        <td><a href="mailto:rajeshvelip39@gmail.com">Email: rajeshvelip39@gmail.com</a></td>
+         <td> <H1>RAJESH VELIP</H1></td>
+        <td align="right"><img src="photo6.JPG" class="circle" width="20%" height="20%"></td>
+        </tr>
+        <tr>
+        <td>H.No: 592, Velipwada Barcem </td>
+        <td align="right">Mobile No: 8669100787</td></tr>
+        <tr><td>Quepem Goa, 403703 </td>
+        <td align="right"><a href="mailto:rajeshvelip39@gmail.com">Email: rajeshvelip39@gmail.com</a></td>
             </tr>
         </table>
 
@@ -45,44 +52,44 @@
           </table>
 
          <h3>PROJECTS</h3>
-<h4>AUTOMATIC VACUUM CLEANER</h4>
-<p>Description: Created an automatic vacuum cleaner using Arduino Uno.<br>
-Responsibilities: Worked as a team leader in the group of 6 people.<br>
-Key Technologies:<br>
-Language : C++<br>
-Operating System : Windows 10<br>
-Platform : Arduino IDE<br>
+<h4><b><u>AUTOMATIC VACUUM CLEANER</u></b></h4>
+<p><b>Description:</b> Created an automatic vacuum cleaner using Arduino Uno.<br>
+<b>Responsibilities:</b> Worked as a team leader in the group of 6 people.<br>
+<u>Key Technologies:</u><br>
+<b>Language:</b> C++<br>
+<b>Operating System:</b> Windows 10<br>
+<b>Platform:</b> Arduino IDE<br>
 </p>
-<h4>E-TICKETING RESERVATION SYSTEM</h4>
-<p>Description: Created an E-ticketing flight reservation system to keep the record of the
+<h4><b><u>E-TICKETING RESERVATION SYSTEM</u></b></h4>
+<p><b>Description:</b> Created an E-ticketing flight reservation system to keep the record of the
 reservation available and book a sit where ever there is a reservation available.<br>
-Responsibilities: This project is an individual project.<br>
-Key Technologies:<br>
-Language : C#<br>
-Query : SQL<br>
-Platform : Visual Studio<br>
-Database : Oracle Server<br>
+<b>Responsibilities:</b> This project is an individual project.<br>
+<u>Key Technologies:</u><br>
+<b>Language:</b> C#<br>
+<b>Query:</b> SQL<br>
+<b>Platform:</b> Visual Studio<br>
+<b>Database:</b> Oracle Server<br>
 </p>
-<h4>AUGMENTED REALITY CAR SHOWCASE APP</h4>
-<p>Description: The Augmented Reality Car Showcase App is designed and developed
+<h4><b><u>AUGMENTED REALITY CAR SHOWCASE APP</u></b></h4>
+<p><b>Description:</b> The Augmented Reality Car Showcase App is designed and developed
 to be able to project the desired car in real time using augmented reality to give a
 realistic user experience to the customer before the purchase ofthe car.<br>
-Responsibilities: Working as an active member in a group of 6 people and contributed in
+<b>Responsibilities:</b> Working as an active member in a group of 6 people and contributed in
 creating 3D models of the car using Blender.<br>
-Key Technologies:<br>
-Language : C#<br>
-Platform : Unity Engine<br>
-Advanced Technology : Vuforia Engine<br>
+<u>Key Technologies:</u><br>
+<b>Language:</b> C#<br>
+<b>Platform:</b> Unity Engine<br>
+<b>Advanced Technology:</b> Vuforia Engine<br>
 </p>
 
 <h3>TECHNICAL SKILLS</h3>
-<p>Programming Languages: C, C++, Java, Python.<br>
-Scripting Languages: HTML, CSS, Javascript, PHP, MySQL, jQuery, jQuery Mobile, Bootstrap.<br>
-Editor: Jupyter notebook ,Visual Studio, Sublime Text Editor.<br>
+<p><b>Programming Languages:</b> C, C++, Java, Python.<br>
+<b>Scripting Languages:</b> HTML, CSS, Javascript, PHP, MySQL, jQuery, jQuery Mobile, Bootstrap.<br>
+<b>Editor:</b> Jupyter notebook ,Visual Studio, Sublime Text Editor.<br>
 </p>
 
-
-<h4><a href="tutorials.html">Tutorials</a></h4>
+</div>
+<h4 style="text-align: center;"><a href="tutorials.html">Tutorials</a></h4>
 
         </body>
         
