--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id="color">
         <table>
         <tr>
-         <td> <H1>RAJESH VELIP</H1></td>
-        <td align="right"><img src="photo6.JPG" class="circle" width="20%" height="20%"></td>
+         <td> <H1 style="text-align: center;">RAJESH VELIP</H1></td>
+        <td align="right"><img src="photo6.JPG" class="circle" width="20%" height="20%" style="align-items: center;"></td>
         </tr>
         <tr>
         <td>H.No: 592, Velipwada Barcem </td>
