--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <table>
         <tr>
          <td> <H1 style="text-align: center;">RAJESH VELIP</H1></td>
-        <td align="right"><img src="photo6.JPG" class="circle" width="20%" height="20%" style="align-items: center;"></td>
+        <td align="right"><img src="photo6.JPG" class="circle" width="20%" height="20%"></td>
         </tr>
         <tr>
         <td>H.No: 592, Velipwada Barcem </td>
